<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/Orange"
xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <EditText
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_an_number"
        app:layout_constraintBottom_toTopOf="@+id/SecActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

<TextView
   android:id="@+id/SecActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/second_activity"
    android:textSize="40dp"
    android:backgroundTint="@color/purple_700"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"

    />

    <Button
        android:id="@+id/returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>